@@ -1,3 +1,8 @@
+2016-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/bmp.c (ReadBMPImage): Fix reading 24-bit Microsoft BMP
+	which claims to have a colormap.
+
 2016-04-13 Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* PerlMagick/t/input_complex_lsb_double_V4.mat Demo Matlab V4
